tests/paczka1/small_fuzzy/81238355.err
Error in line 2: Lda S189 35,8
Error in line 1: NrXu3 A984 64,8
Error in line 8: NrXu3 S18& 47,8
Error in line 3: FKkSf0vlJ3 S189 14,9
Error in line 7: NrXu3 S189 26,4
Error in line 10: NdX A505 28,5
